--- a/lesson7_1.ipynb
+++ b/lesson7_1.ipynb
@@ -10,72 +10,29 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: requests in /opt/conda/lib/python3.12/site-packages (2.32.3)\n",
-      "Collecting bs4\n",
-      "  Downloading bs4-0.0.2-py2.py3-none-any.whl.metadata (411 bytes)\n",
-      "Collecting pandas\n",
-      "  Downloading pandas-2.2.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (89 kB)\n",
-      "Collecting matplotlib\n",
-      "  Downloading matplotlib-3.10.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (11 kB)\n",
-      "Collecting wget\n",
-      "  Downloading wget-3.2.zip (10 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: charset-normalizer<4,>=2 in /opt/conda/lib/python3.12/site-packages (from requests) (3.3.2)\n",
+      "Requirement already satisfied: bs4 in /opt/conda/lib/python3.12/site-packages (0.0.2)\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.12/site-packages (2.2.3)\n",
+      "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.12/site-packages (3.10.1)\n",
+      "Requirement already satisfied: wget in /opt/conda/lib/python3.12/site-packages (3.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/conda/lib/python3.12/site-packages (from requests) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.12/site-packages (from requests) (3.7)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/lib/python3.12/site-packages (from requests) (2.3.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.12/site-packages (from requests) (2025.1.31)\n",
-      "Collecting beautifulsoup4 (from bs4)\n",
-      "  Downloading beautifulsoup4-4.13.3-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting numpy>=1.26.0 (from pandas)\n",
-      "  Downloading numpy-2.2.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
+      "Requirement already satisfied: beautifulsoup4 in /opt/conda/lib/python3.12/site-packages (from bs4) (4.13.3)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /opt/conda/lib/python3.12/site-packages (from pandas) (2.2.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Downloading pytz-2025.1-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Downloading tzdata-2025.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
-      "  Downloading contourpy-1.3.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (5.4 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib)\n",
-      "  Downloading cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
-      "  Downloading fonttools-4.56.0-cp312-cp312-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (101 kB)\n",
-      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
-      "  Downloading kiwisolver-1.4.8-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (6.2 kB)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.12/site-packages (from pandas) (2025.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.12/site-packages (from pandas) (2025.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (4.56.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (1.4.8)\n",
       "Requirement already satisfied: packaging>=20.0 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (24.2)\n",
-      "Collecting pillow>=8 (from matplotlib)\n",
-      "  Downloading pillow-11.1.0-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (9.1 kB)\n",
-      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
-      "  Downloading pyparsing-3.2.1-py3-none-any.whl.metadata (5.0 kB)\n",
+      "Requirement already satisfied: pillow>=8 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (11.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (3.2.1)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Collecting soupsieve>1.2 (from beautifulsoup4->bs4)\n",
-      "  Downloading soupsieve-2.6-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /opt/conda/lib/python3.12/site-packages (from beautifulsoup4->bs4) (2.6)\n",
       "Requirement already satisfied: typing-extensions>=4.0.0 in /opt/conda/lib/python3.12/site-packages (from beautifulsoup4->bs4) (4.12.2)\n",
-      "Downloading bs4-0.0.2-py2.py3-none-any.whl (1.2 kB)\n",
-      "Downloading pandas-2.2.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.7 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.7/12.7 MB\u001b[0m \u001b[31m31.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
-      "\u001b[?25hDownloading matplotlib-3.10.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (8.6 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.6/8.6 MB\u001b[0m \u001b[31m82.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading contourpy-1.3.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (323 kB)\n",
-      "Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Downloading fonttools-4.56.0-cp312-cp312-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.9 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m78.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading kiwisolver-1.4.8-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m63.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading numpy-2.2.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.1/16.1 MB\u001b[0m \u001b[31m80.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading pillow-11.1.0-cp312-cp312-manylinux_2_28_x86_64.whl (4.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.5/4.5 MB\u001b[0m \u001b[31m78.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading pyparsing-3.2.1-py3-none-any.whl (107 kB)\n",
-      "Downloading pytz-2025.1-py2.py3-none-any.whl (507 kB)\n",
-      "Downloading tzdata-2025.1-py2.py3-none-any.whl (346 kB)\n",
-      "Downloading beautifulsoup4-4.13.3-py3-none-any.whl (186 kB)\n",
-      "Downloading soupsieve-2.6-py3-none-any.whl (36 kB)\n",
-      "Building wheels for collected packages: wget\n",
-      "  Building wheel for wget (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for wget: filename=wget-3.2-py3-none-any.whl size=9685 sha256=506248f1a1d92e22e2d347b2be7b80bdf6162b44661dde733566a9b1baeb5e76\n",
-      "  Stored in directory: /root/.cache/pip/wheels/01/46/3b/e29ffbe4ebe614ff224bad40fc6a5773a67a163251585a13a9\n",
-      "Successfully built wget\n",
-      "Installing collected packages: wget, pytz, tzdata, soupsieve, pyparsing, pillow, numpy, kiwisolver, fonttools, cycler, pandas, contourpy, beautifulsoup4, matplotlib, bs4\n",
-      "Successfully installed beautifulsoup4-4.13.3 bs4-0.0.2 contourpy-1.3.1 cycler-0.12.1 fonttools-4.56.0 kiwisolver-1.4.8 matplotlib-3.10.1 numpy-2.2.3 pandas-2.2.3 pillow-11.1.0 pyparsing-3.2.1 pytz-2025.1 soupsieve-2.6 tzdata-2025.1 wget-3.2\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
@@ -117,7 +74,7 @@
       "\n",
       "    <link rel=\"stylesheet\" href=\"/Content/css/jquery-ui.min.css\">\n",
       "    <link rel=\"stylesheet\" href=\"/Content/main-3.8.0.css\">\n",
-      "    <style nonce=\"ITApEodXkle8TF0eJznGqjAvC+jASzwUQileUBSZ+MY=\">\n",
+      "    <style nonce=\"gDmlejoSEDK9SNi1KQyL4AzPz+sniIX2HR8iXdNX68w=\">\n",
       "    h1.hero__header { font-size:1.5625rem }\n",
       "    \n",
       "    \n",
@@ -266,7 +223,7 @@
       "            <div id=\"ie11andabove\">\n",
       "                \n",
       "\n",
-      "<style nonce=\"7jsd9mvQjzaU1kShdEI/Z5KR1z+maEylTG4av/9BkLc=\">\n",
+      "<style nonce=\"zpNFtM4IZG3TSvfYtp5orLxzKoolX/7+5DVN205Tdk8=\">\n",
       "    .table td.text-right {position:relative; white-space:nowrap}\n",
       "    .table form {display:inline}\n",
       "    .bank {left:17px; margin:0; padding:0 6px; right:auto}\n",
@@ -969,7 +926,7 @@
       "            </div>\n",
       "        </main>\n",
       "    </div>\n",
-      "    <script nonce=\"N/oOCVWDagyuNjgct/aM+BChszIOOl+fNSFRShDf2K4=\">\n",
+      "    <script nonce=\"rSn/6oZ6UGM6E3RpZ44Uv5RCHzU5ZkYs6/ebxaUXYLs=\">\n",
       "        if (navigator.userAgent.indexOf(\"MSIE\") >= 0) {\n",
       "                            document.getElementById(\"h1_small_id\").textContent = \"\";\n",
       "                            document.getElementById(\"h1_id\").textContent = \"請更新您的瀏覽器\";\n",
@@ -1028,7 +985,7 @@
       "        <script src=\"/Scripts/main.local.min.js?3.5.0\"></script>\n",
       "    <script defer src=\"/Scripts/jquery-ui.min.js\"></script>\n",
       "    <!--<script src=\"/Scripts/highcharts.js\"></script>-->\n",
-      "    <script nonce=\"N/oOCVWDagyuNjgct/aM+BChszIOOl+fNSFRShDf2K4=\">\n",
+      "    <script nonce=\"rSn/6oZ6UGM6E3RpZ44Uv5RCHzU5ZkYs6/ebxaUXYLs=\">\n",
       "        var controller = 'xrt'.toLowerCase();\n",
       "\n",
       "        // Autocomplete\n",
