--- a/lesson9/lesson9_3.ipynb
+++ b/lesson9/lesson9_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -37,36 +37,36 @@
        "      <th>0</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>-1.202597</td>\n",
-       "      <td>0.213570</td>\n",
+       "      <td>0.323678</td>\n",
+       "      <td>0.035011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>a</td>\n",
        "      <td>two</td>\n",
-       "      <td>0.701862</td>\n",
-       "      <td>-0.531390</td>\n",
+       "      <td>-0.281608</td>\n",
+       "      <td>-1.395308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>b</td>\n",
        "      <td>one</td>\n",
-       "      <td>0.128083</td>\n",
-       "      <td>-2.113398</td>\n",
+       "      <td>0.638691</td>\n",
+       "      <td>0.011479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>b</td>\n",
        "      <td>two</td>\n",
-       "      <td>0.026387</td>\n",
-       "      <td>0.628990</td>\n",
+       "      <td>0.037476</td>\n",
+       "      <td>0.345098</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>-0.184180</td>\n",
-       "      <td>-1.174783</td>\n",
+       "      <td>1.152518</td>\n",
+       "      <td>-0.239975</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -74,14 +74,14 @@
       ],
       "text/plain": [
        "  key1 key2     data1     data2\n",
-       "0    a  one -1.202597  0.213570\n",
-       "1    a  two  0.701862 -0.531390\n",
-       "2    b  one  0.128083 -2.113398\n",
-       "3    b  two  0.026387  0.628990\n",
-       "4    a  one -0.184180 -1.174783"
+       "0    a  one  0.323678  0.035011\n",
+       "1    a  two -0.281608 -1.395308\n",
+       "2    b  one  0.638691  0.011479\n",
+       "3    b  two  0.037476  0.345098\n",
+       "4    a  one  1.152518 -0.239975"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,6 +89,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "\n",
     "df = pd.DataFrame({\"key1\":[\"a\", \"a\", \"b\", \"b\", \"a\"],\n",
     "                   \"key2\":[\"one\", \"two\", \"one\", \"two\", \"one\"],\n",
@@ -99,12 +100,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x7f32de1e8500>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Series 的 Groupby\n",
-    "grouped = df[\"data1\"], groupby([\"台北\", \"台北\", \"台北\", \"台中\", \"台中\"])\n"
+    "grouped = df[\"data1\"].groupby([\"台北\", \"台北\", \"台北\", \"台中\", \"台中\"])\n",
+    "grouped\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "台中    0.594997\n",
+       "台北    0.226921\n",
+       "Name: data1, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "key2\n",
+       "one    0.704963\n",
+       "two   -0.122066\n",
+       "Name: data1, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"data1\"].groupby(df[\"key2\"]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "key1  key2\n",
+       "a     one     0.738098\n",
+       "      two    -0.281608\n",
+       "b     one     0.638691\n",
+       "      two     0.037476\n",
+       "Name: data1, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = df['data1'].groupby([df['key1'],df['key2']]).mean()\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>key1</th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key2</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>one</th>\n",
+       "      <td>0.738098</td>\n",
+       "      <td>0.638691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>-0.281608</td>\n",
+       "      <td>0.037476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "key1         a         b\n",
+       "key2                    \n",
+       "one   0.738098  0.638691\n",
+       "two  -0.281608  0.037476"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.unstack(level='key1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "key1\n",
+       "a    0.398196\n",
+       "b    0.338084\n",
+       "Name: data1, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"key1\")[\"data1\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key1</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>0.398196</td>\n",
+       "      <td>-0.533424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>0.338084</td>\n",
+       "      <td>0.178289</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         data1     data2\n",
+       "key1                    \n",
+       "a     0.398196 -0.533424\n",
+       "b     0.338084  0.178289"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"key1\")[[\"data1\", \"data2\"]].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>key1</th>\n",
+       "      <th>key2</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">a</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.738098</td>\n",
+       "      <td>-0.102482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>-0.281608</td>\n",
+       "      <td>-1.395308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">b</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.638691</td>\n",
+       "      <td>0.011479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>0.037476</td>\n",
+       "      <td>0.345098</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              data1     data2\n",
+       "key1 key2                    \n",
+       "a    one   0.738098 -0.102482\n",
+       "     two  -0.281608 -1.395308\n",
+       "b    one   0.638691  0.011479\n",
+       "     two   0.037476  0.345098"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby([\"key1\", \"key2\"])[[\"data1\", \"data2\"]].mean()"
    ]
   }
  ],
