--- a/lesson9/lesson9_3.ipynb
+++ b/lesson9/lesson9_3.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -387,8 +387,8 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">a</th>\n",
        "      <th>one</th>\n",
-       "      <td>0.738098</td>\n",
-       "      <td>-0.102482</td>\n",
+       "      <td>1.476197</td>\n",
+       "      <td>-0.204964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>two</th>\n",
@@ -413,19 +413,19 @@
       "text/plain": [
        "              data1     data2\n",
        "key1 key2                    \n",
-       "a    one   0.738098 -0.102482\n",
+       "a    one   1.476197 -0.204964\n",
        "     two  -0.281608 -1.395308\n",
        "b    one   0.638691  0.011479\n",
        "     two   0.037476  0.345098"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby([\"key1\", \"key2\"])[[\"data1\", \"data2\"]].mean()"
+    "df.groupby([\"key1\", \"key2\"])[[\"data1\", \"data2\"]].sum()"
    ]
   }
  ],
