--- a/lesson9/lesson9_5.ipynb
+++ b/lesson9/lesson9_5.ipynb
@@ -469,6 +469,433 @@
     "styled_df1 = df.style.format(\"{:.2f}\", subset=[\"A\", \"B\"])\n",
     "styled_df1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_b84cf_row0_col0 {\n",
+       "  background-color: #e9e0ef;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_b84cf_row0_col1 {\n",
+       "  background-color: #014838;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row1_col0 {\n",
+       "  background-color: #027d80;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row1_col1 {\n",
+       "  background-color: #5ba3cb;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row2_col0, #T_b84cf_row2_col1, #T_b84cf_row3_col0, #T_b84cf_row8_col1 {\n",
+       "  background-color: #fff7fb;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_b84cf_row3_col1 {\n",
+       "  background-color: #c9cee4;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_b84cf_row4_col0 {\n",
+       "  background-color: #adc1dd;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_b84cf_row4_col1 {\n",
+       "  background-color: #5fa5cc;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row5_col0 {\n",
+       "  background-color: #80b1d4;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row5_col1 {\n",
+       "  background-color: #017165;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row6_col0 {\n",
+       "  background-color: #dbd8ea;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_b84cf_row6_col1 {\n",
+       "  background-color: #8eb5d6;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_b84cf_row7_col0 {\n",
+       "  background-color: #027b7d;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row7_col1 {\n",
+       "  background-color: #015948;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row8_col0 {\n",
+       "  background-color: #ede3f0;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_b84cf_row9_col0 {\n",
+       "  background-color: #078390;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_b84cf_row9_col1 {\n",
+       "  background-color: #f2e9f4;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_b84cf\">\n",
+       "  <caption>Weather Conditions</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_b84cf_level0_col0\" class=\"col_heading level0 col0\" >Tokyo</th>\n",
+       "      <th id=\"T_b84cf_level0_col1\" class=\"col_heading level0 col1\" >Taipei</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row0\" class=\"row_heading level0 row0\" >2021-01-01 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row0_col0\" class=\"data row0 col0\" >1.553640</td>\n",
+       "      <td id=\"T_b84cf_row0_col1\" class=\"data row0 col1\" >4.955390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row1\" class=\"row_heading level0 row1\" >2021-01-02 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row1_col0\" class=\"data row1 col0\" >4.097514</td>\n",
+       "      <td id=\"T_b84cf_row1_col1\" class=\"data row1 col1\" >3.115713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row2\" class=\"row_heading level0 row2\" >2021-01-03 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row2_col0\" class=\"data row2 col0\" >0.233339</td>\n",
+       "      <td id=\"T_b84cf_row2_col1\" class=\"data row2 col1\" >0.792785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row3\" class=\"row_heading level0 row3\" >2021-01-04 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row3_col0\" class=\"data row3 col0\" >0.457014</td>\n",
+       "      <td id=\"T_b84cf_row3_col1\" class=\"data row3 col1\" >2.086680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row4\" class=\"row_heading level0 row4\" >2021-01-05 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row4_col0\" class=\"data row4 col0\" >2.409778</td>\n",
+       "      <td id=\"T_b84cf_row4_col1\" class=\"data row4 col1\" >3.093313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row5\" class=\"row_heading level0 row5\" >2021-01-06 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row5_col0\" class=\"data row5 col0\" >2.798871</td>\n",
+       "      <td id=\"T_b84cf_row5_col1\" class=\"data row5 col1\" >4.366693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row6\" class=\"row_heading level0 row6\" >2021-01-07 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row6_col0\" class=\"data row6 col0\" >1.802940</td>\n",
+       "      <td id=\"T_b84cf_row6_col1\" class=\"data row6 col1\" >2.699231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row7\" class=\"row_heading level0 row7\" >2021-01-08 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row7_col0\" class=\"data row7 col0\" >4.133647</td>\n",
+       "      <td id=\"T_b84cf_row7_col1\" class=\"data row7 col1\" >4.739687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row8\" class=\"row_heading level0 row8\" >2021-01-09 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row8_col0\" class=\"data row8 col0\" >1.493354</td>\n",
+       "      <td id=\"T_b84cf_row8_col1\" class=\"data row8 col1\" >0.739613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b84cf_level0_row9\" class=\"row_heading level0 row9\" >2021-01-10 00:00:00</th>\n",
+       "      <td id=\"T_b84cf_row9_col0\" class=\"data row9 col0\" >3.939731</td>\n",
+       "      <td id=\"T_b84cf_row9_col1\" class=\"data row9 col1\" >1.336491</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f9ee63d90a0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_df = pd.DataFrame(np.random.rand(10, 2)*5,\n",
+    "                          index=pd.date_range(start=\"2021-01-01\", periods=10),\n",
+    "                          columns=[\"Tokyo\", \"Taipei\"])\n",
+    "weather_df.style\\\n",
+    ".set_caption(\"Weather Conditions\")\\\n",
+    ".background_gradient(axis=None, vmin=1, vmax=5, cmap=\"PuBuGn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_7e824_row0_col0 {\n",
+       "  background-color: #c8cde4;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_7e824_row0_col1, #T_7e824_row1_col0, #T_7e824_row1_col1, #T_7e824_row4_col1, #T_7e824_row5_col1, #T_7e824_row7_col0, #T_7e824_row7_col1, #T_7e824_row9_col0 {\n",
+       "  background-color: #014636;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_7e824_row2_col0, #T_7e824_row2_col1, #T_7e824_row3_col0, #T_7e824_row8_col1 {\n",
+       "  background-color: #fff7fb;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_7e824_row3_col1 {\n",
+       "  background-color: #55a0ca;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_7e824_row4_col0 {\n",
+       "  background-color: #14869d;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_7e824_row5_col0 {\n",
+       "  background-color: #016451;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_7e824_row6_col0 {\n",
+       "  background-color: #99b9d9;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_7e824_row6_col1 {\n",
+       "  background-color: #017062;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_7e824_row8_col0 {\n",
+       "  background-color: #d1d1e6;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_7e824_row9_col1 {\n",
+       "  background-color: #e2dced;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_7e824\">\n",
+       "  <caption>Weather Conditions</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_7e824_level0_col0\" class=\"col_heading level0 col0\" >Tokyo</th>\n",
+       "      <th id=\"T_7e824_level0_col1\" class=\"col_heading level0 col1\" >Taipei</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row0\" class=\"row_heading level0 row0\" >2021-01-01 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row0_col0\" class=\"data row0 col0\" >1.553640</td>\n",
+       "      <td id=\"T_7e824_row0_col1\" class=\"data row0 col1\" >4.955390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row1\" class=\"row_heading level0 row1\" >2021-01-02 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row1_col0\" class=\"data row1 col0\" >4.097514</td>\n",
+       "      <td id=\"T_7e824_row1_col1\" class=\"data row1 col1\" >3.115713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row2\" class=\"row_heading level0 row2\" >2021-01-03 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row2_col0\" class=\"data row2 col0\" >0.233339</td>\n",
+       "      <td id=\"T_7e824_row2_col1\" class=\"data row2 col1\" >0.792785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row3\" class=\"row_heading level0 row3\" >2021-01-04 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row3_col0\" class=\"data row3 col0\" >0.457014</td>\n",
+       "      <td id=\"T_7e824_row3_col1\" class=\"data row3 col1\" >2.086680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row4\" class=\"row_heading level0 row4\" >2021-01-05 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row4_col0\" class=\"data row4 col0\" >2.409778</td>\n",
+       "      <td id=\"T_7e824_row4_col1\" class=\"data row4 col1\" >3.093313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row5\" class=\"row_heading level0 row5\" >2021-01-06 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row5_col0\" class=\"data row5 col0\" >2.798871</td>\n",
+       "      <td id=\"T_7e824_row5_col1\" class=\"data row5 col1\" >4.366693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row6\" class=\"row_heading level0 row6\" >2021-01-07 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row6_col0\" class=\"data row6 col0\" >1.802940</td>\n",
+       "      <td id=\"T_7e824_row6_col1\" class=\"data row6 col1\" >2.699231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row7\" class=\"row_heading level0 row7\" >2021-01-08 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row7_col0\" class=\"data row7 col0\" >4.133647</td>\n",
+       "      <td id=\"T_7e824_row7_col1\" class=\"data row7 col1\" >4.739687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row8\" class=\"row_heading level0 row8\" >2021-01-09 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row8_col0\" class=\"data row8 col0\" >1.493354</td>\n",
+       "      <td id=\"T_7e824_row8_col1\" class=\"data row8 col1\" >0.739613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7e824_level0_row9\" class=\"row_heading level0 row9\" >2021-01-10 00:00:00</th>\n",
+       "      <td id=\"T_7e824_row9_col0\" class=\"data row9 col0\" >3.939731</td>\n",
+       "      <td id=\"T_7e824_row9_col1\" class=\"data row9 col1\" >1.336491</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f9ee63db410>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_df.style\\\n",
+    ".set_caption(\"Weather Conditions\")\\\n",
+    ".background_gradient(axis=None, vmin=1, vmax=3, cmap=\"PuBuGn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_10f92_row0_col0 {\n",
+       "  background-color: #b9cee4;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_10f92_row0_col1, #T_10f92_row1_col0, #T_10f92_row1_col1, #T_10f92_row4_col1, #T_10f92_row5_col1, #T_10f92_row7_col0, #T_10f92_row7_col1, #T_10f92_row9_col0 {\n",
+       "  background-color: #4d004b;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_10f92_row2_col0, #T_10f92_row2_col1, #T_10f92_row3_col0, #T_10f92_row8_col1 {\n",
+       "  background-color: #f7fcfd;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_10f92_row3_col1 {\n",
+       "  background-color: #8c86be;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_10f92_row4_col0 {\n",
+       "  background-color: #8950a4;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_10f92_row5_col0 {\n",
+       "  background-color: #760c71;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_10f92_row6_col0 {\n",
+       "  background-color: #9ab4d6;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_10f92_row6_col1 {\n",
+       "  background-color: #821982;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_10f92_row8_col0 {\n",
+       "  background-color: #c0d4e6;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_10f92_row9_col1 {\n",
+       "  background-color: #d4e3ef;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_10f92\">\n",
+       "  <caption>Weather Conditions</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_10f92_level0_col0\" class=\"col_heading level0 col0\" >Tokyo</th>\n",
+       "      <th id=\"T_10f92_level0_col1\" class=\"col_heading level0 col1\" >Taipei</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row0\" class=\"row_heading level0 row0\" >2021-01-01 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row0_col0\" class=\"data row0 col0\" >1.553640</td>\n",
+       "      <td id=\"T_10f92_row0_col1\" class=\"data row0 col1\" >4.955390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row1\" class=\"row_heading level0 row1\" >2021-01-02 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row1_col0\" class=\"data row1 col0\" >4.097514</td>\n",
+       "      <td id=\"T_10f92_row1_col1\" class=\"data row1 col1\" >3.115713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row2\" class=\"row_heading level0 row2\" >2021-01-03 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row2_col0\" class=\"data row2 col0\" >0.233339</td>\n",
+       "      <td id=\"T_10f92_row2_col1\" class=\"data row2 col1\" >0.792785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row3\" class=\"row_heading level0 row3\" >2021-01-04 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row3_col0\" class=\"data row3 col0\" >0.457014</td>\n",
+       "      <td id=\"T_10f92_row3_col1\" class=\"data row3 col1\" >2.086680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row4\" class=\"row_heading level0 row4\" >2021-01-05 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row4_col0\" class=\"data row4 col0\" >2.409778</td>\n",
+       "      <td id=\"T_10f92_row4_col1\" class=\"data row4 col1\" >3.093313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row5\" class=\"row_heading level0 row5\" >2021-01-06 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row5_col0\" class=\"data row5 col0\" >2.798871</td>\n",
+       "      <td id=\"T_10f92_row5_col1\" class=\"data row5 col1\" >4.366693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row6\" class=\"row_heading level0 row6\" >2021-01-07 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row6_col0\" class=\"data row6 col0\" >1.802940</td>\n",
+       "      <td id=\"T_10f92_row6_col1\" class=\"data row6 col1\" >2.699231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row7\" class=\"row_heading level0 row7\" >2021-01-08 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row7_col0\" class=\"data row7 col0\" >4.133647</td>\n",
+       "      <td id=\"T_10f92_row7_col1\" class=\"data row7 col1\" >4.739687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row8\" class=\"row_heading level0 row8\" >2021-01-09 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row8_col0\" class=\"data row8 col0\" >1.493354</td>\n",
+       "      <td id=\"T_10f92_row8_col1\" class=\"data row8 col1\" >0.739613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_10f92_level0_row9\" class=\"row_heading level0 row9\" >2021-01-10 00:00:00</th>\n",
+       "      <td id=\"T_10f92_row9_col0\" class=\"data row9 col0\" >3.939731</td>\n",
+       "      <td id=\"T_10f92_row9_col1\" class=\"data row9 col1\" >1.336491</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f9ee63db830>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_df.style\\\n",
+    ".set_caption(\"Weather Conditions\")\\\n",
+    ".background_gradient(axis=None, vmin=1, vmax=3, cmap=\"BuPu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_df.style\\\n",
+    ".set_caption(\"Weather Conditions\")\\\n",
+    ".background_gradient(axis=None, vmin=1, vmax=3, cmap=\"BuPu\")\\\n",
+    ".to_excel(\"test1.xlsx\")"
+   ]
   }
  ],
  "metadata": {
